<resources>
    <string name="app_name">Glucosio</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_invite">Invite a friend</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_history">History</string>
    <string name="tab_tips">Tips</string>
    <string name="activity_main_add_new_reading">Add new reading</string>
    <string name="title_activity_hello">Hello.</string>
    <string name="helloactivity_headline">Hello.</string>
    <string name="helloactivity_terms">Terms of Use</string>
    <string name="helloactivity_subhead">We just need a few quick things before getting you started.</string>
    <string name="helloactivity_country">Country</string>
    <string name="helloactivity_age">Age</string>
    <string name="helloactivity_age_invalid">Please enter a valid age.</string>
    <string name="helloactivity_gender">Gender</string>
    <string name="helloactivity_gender_list_1">Male</string>
    <string name="helloactivity_gender_list_2">Female</string>
    <string name="helloactivity_gender_list_3">Other</string>
    <string-array name="helloactivity_gender_list" translatable="false">
        <item>@string/helloactivity_gender_list_1</item>
        <item>@string/helloactivity_gender_list_2</item>
        <item>@string/helloactivity_gender_list_3</item>
    </string-array>
    <string name="helloactivity_spinner_diabetes_type">Diabetes type</string>
    <string name="helloactivity_spinner_diabetes_type_1">Type 1</string>
    <string name="helloactivity_spinner_diabetes_type_2">Type 2</string>
    <string name="helloactivity_spinner_diabetes_gdm">Gestational</string>
    <string name="helloactivity_spinner_diabetes_lada">LADA</string>
    <string-array name="helloactivity_diabetes_type" translatable="false">
        <item>@string/helloactivity_spinner_diabetes_type_1</item>
        <item>@string/helloactivity_spinner_diabetes_type_2</item>
        <item>@string/helloactivity_spinner_diabetes_gdm</item>
        <item>@string/helloactivity_spinner_diabetes_lada</item>
    </string-array>
    <string name="helloactivity_spinner_preferred_glucose_unit">Preferred Glucose unit</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_1">mg/dL</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_2">mmol/L</string>
    <string-array name="helloactivity_preferred_glucose_unit" translatable="false">
        <item>@string/helloactivity_spinner_preferred_glucose_unit_1</item>
        <item>@string/helloactivity_spinner_preferred_glucose_unit_2</item>
    </string-array>
    <string name="preferences_spinner_preferred_a1c_unit">Preferred HbA1c unit</string>
    <string name="preferences_spinner_preferred_a1c_unit_1">percentage</string>
    <string name="preferences_spinner_preferred_a1c_unit_2">mmol/mol</string>
    <string-array name="preferences_preferred_a1c_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_a1c_unit_1</item>
        <item>@string/preferences_spinner_preferred_a1c_unit_2</item>
    </string-array>
    <string name="preferences_spinner_preferred_weight_unit">Preferred Weight unit</string>
    <string name="preferences_spinner_preferred_weight_unit_1">kilograms</string>
    <string name="preferences_spinner_preferred_weight_unit_2">pounds</string>
    <string-array name="preferences_preferred_weight_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_weight_unit_1</item>
        <item>@string/preferences_spinner_preferred_weight_unit_2</item>
    </string-array>
    <string name="helloactivity_share_data">Share anonymous data for research.</string>
    <string name="helloactivity_hint_settings">You can change these in settings later.</string>
    <string name="helloactivity_button_next">NEXT</string>
    <string name="helloactivity_button_start">GET STARTED</string>
    <string name="fragment_empty_text">No info available yet. \n Add your first reading here.</string>
    <string name="dialog_add_title">Add Blood Glucose Level</string>
    <string name="dialog_add_concentration">Concentration</string>
    <string name="dialog_add_concentration_um" translatable="false">mg/dL</string>
    <string name="dialog_add_date">Date</string>
    <string name="dialog_add_time">Time</string>
    <string name="dialog_add_measured">Measured</string>
    <string name="dialog_add_type_1">Before breakfast</string>
    <string name="dialog_add_type_2">After breakfast</string>
    <string name="dialog_add_type_3">Before lunch</string>
    <string name="dialog_add_type_4">After lunch</string>
    <string name="dialog_add_type_5">Before dinner</string>
    <string name="dialog_add_type_6">After dinner</string>
    <string name="dialog_add_type_7">Snack</string>
    <string name="dialog_add_type_8">Bedtime</string>
    <string name="dialog_add_type_9">Night</string>
    <string name="dialog_add_type_10">Fasting glucose</string>
    <string name="dialog_add_type_11">Recheck</string>
    <string name="dialog_add_type_12">Other</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_7</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_9</item>
        <item>@string/dialog_add_type_10</item>
        <item>@string/dialog_add_type_11</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="dialog_add_cancel">CANCEL</string>
    <string name="dialog_add_add">ADD</string>
    <string name="dialog_error2">Please enter a valid value.</string>
    <string name="dialog_error">Please fill all the fields.</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="fragment_history_snackbar_text">1 reading deleted</string>
    <string name="fragment_history_snackbar_action">UNDO</string>
    <string name="fragment_overview_last_reading">Last check:</string>
    <string name="fragment_overview_trend">Trend over past month:</string>
    <string name="fragment_overview_trend_positive">in range and healthy</string>
    <string name="fragment_overview_selector_month">Month</string>
    <string name="fragment_overview_selector_day">Day</string>
    <string name="fragment_overview_selector_week">Week</string>
    <string-array name="fragment_overview_selector_range" translatable="false">
        <item>@string/fragment_overview_selector_day</item>
        <item>@string/fragment_overview_selector_week</item>
        <item>@string/fragment_overview_selector_month</item>
    </string-array>
    <string-array name="fragment_overview_selector_metric" translatable="false">
        <item>@string/fab_glucose</item>
        <item>@string/fab_HB1AC</item>
        <item>@string/fab_cholesterol</item>
        <item>@string/fab_pressure</item>
        <item>@string/fab_ketones</item>
        <item>@string/fab_weight</item>
    </string-array>
    <string name="tip_example" translatable="false">Use less cheese in your recipes and meals. Fresh mozzarella packed in water and Swiss cheese are usually lower in sodium.</string>
    <string name="preferences_about">About</string>
    <string name="preferences_experimental_title" translatable="false">Here be dragons :/</string>
    <string name="preferences_experimental">These features are experimental and may not fully work and are for early testing by users. Remember that you can shake your phone to send us feedback.</string>
    <string name="version" translatable="false">1.3.2 (Chutney)</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_coming_soon">Coming soon...</string>
    <string name="preferences_terms">Terms of use</string>
    <string name="glucose_reading_type">Type</string>
    <string name="weight">Weight</string>
    <string name="dialog_add_custom_type">Custom measurement category</string>
    <string name="add_readings__weight">Body Weight</string>
    <string name="add_readings__ketones">Ketones</string>
    <string name="add_readings__pressure">Blood Pressure</string>
    <string name="add_readings__cholesterol">Cholesterol Level</string>
    <string name="add_readings__HB1AC">HbA1c Reading</string>
    <string name="add_readings__glucose">Blood Glucose Level</string>
</resources>