<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_add_bottom_sheet_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        fontPath="fonts/lato-bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="16dp"
        android:text="@string/activity_main_add_new_reading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onGlucoseFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_glucose" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__glucose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onHB1ACFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_a1c" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__HB1AC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onWeightFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_weight" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__weight" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="onPressureFabClicked"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onPressureFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_pressure" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__pressure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onKetoneFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_ketones" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__ketones" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onCholesterolFabClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/add_circle_cholesterol" />

            <TextView
                style="@style/bottom_sheet_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_readings__cholesterol" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
